--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,7 @@
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: repeat(6, 1fr);
 }
+
+.grayed {
+  background-color: rgba(0, 0, 0, 0.1);
+}
