--- a/src/App.css
+++ b/src/App.css
@@ -59,23 +59,33 @@ button {
   outline: 1px solid #E8EDF3;
 }
 
-.calendar__days {
+.calendar__body {
   display: grid;
-  grid-template-columns: repeat(7, 150px);
-  grid-template-rows: repeat(6, 1fr);
-  gap: 1px;
+  grid-template-rows: repeat(6, 120px);
+}
+
+.calendar__week {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
 }
 
 .calendar__day {
-  height: 100px;
   background-color: white;
 
   display: grid;
-  grid-template-rows: 36px 1fr;
+  grid-template-rows: 40px 1fr;
   outline: 1px solid #E8EDF3;
 }
 
 .calendar__day-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  align-items: center;
+  padding: 0 4px;
+}
+
+.calendar__day-data {
   display: flex;
   flex-direction: row;
   padding: 4px;
@@ -84,40 +94,15 @@ button {
 .calendar__day.grayed {
   background-color: #F5F9FD;
   color: #94A3B8;
-
 }
 
-.day__number {
-  aspect-ratio: 1;
+.calendar__day-number {
+  padding: 6px;
   font-weight: bold;
-  padding: 4px 8px;
 }
 
-.day__number.today {
+.calendar__day-number.today {
   background-color: black;
+  border-radius: 99999px;
   color: white;
-  border-radius: 6px;
-}
-
-.data {
-  z-index: 5;
-}
-
-.data__entry {
-  z-index: 5;
-  width: calc(100% + 2px);
-  transform: translateX(-1px);
-  padding: 4px 0;
-  color: transparent;
-  font-weight: bold;
-}
-
-.data__entry.first {
-  border-radius: 10px 0 0 10px;
-  padding-left: 10px;
-  color: white;
-}
-
-.data__entry.last {
-  border-radius: 0 10px 10px 0;
 }
