--- a/src/App.css
+++ b/src/App.css
@@ -11,16 +11,18 @@ html, body, #root, .app {
   height: 100%;
 }
 
-button {
-  border: none;
-  padding: 3px 6px;
-  border-radius: 4px;
-}
-
 .app {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.calendar__controls {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
 }
 
 .nav {
@@ -65,6 +67,7 @@ button {
 }
 
 .calendar__week {
+  position: relative;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
 }
@@ -86,9 +89,6 @@ button {
 }
 
 .calendar__day-data {
-  display: flex;
-  flex-direction: row;
-  padding: 4px;
 }
 
 .calendar__day.grayed {
@@ -105,4 +105,46 @@ button {
   background-color: black;
   border-radius: 99999px;
   color: white;
+}
+
+
+
+
+.calendar__week-data {
+  position: absolute;
+  width: 100%;
+  margin-top: 40px;
+
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(4, auto);
+  gap: 5px;
+}
+
+.calendar__day-data {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.data {
+  background-color: black;
+  color: transparent;
+  white-space: nowrap;
+  padding: 4px 10px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.data.first-day {
+  border-radius: 10px 0 0 10px;
+  margin-left: 10px;
+  color: white;
+}
+
+.data.last-day {
+  border-radius: 0 10px 10px 0;
+  margin-right: 10px;
 }
