--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,7 @@ html, body, #root, .app {
   grid-template-columns: repeat(7, 1fr);
 }
 
-.calendar__day {
+.calendar__cell {
   background-color: white;
 
   display: grid;
@@ -80,7 +80,7 @@ html, body, #root, .app {
   outline: 1px solid #E8EDF3;
 }
 
-.calendar__day-header {
+.calendar__cell-header {
   display: flex;
   flex-direction: row;
   justify-content: end;
@@ -88,20 +88,20 @@ html, body, #root, .app {
   padding: 0 4px;
 }
 
-.calendar__day-data {
+.calendar__cell-data {
 }
 
-.calendar__day.grayed {
+.calendar__cell.grayed {
   background-color: #F5F9FD;
   color: #94A3B8;
 }
 
-.calendar__day-number {
+.calendar__cell-number {
   padding: 6px;
   font-weight: bold;
 }
 
-.calendar__day-number.today {
+.calendar__cell-number.today {
   background-color: black;
   border-radius: 99999px;
   color: white;
@@ -147,4 +147,27 @@ html, body, #root, .app {
 .data.last-day {
   border-radius: 0 10px 10px 0;
   margin-right: 10px;
+}
+
+
+.calendar__task-container {
+
+  position: absolute;
+  width: 100%;
+  height: 40px;
+  margin-top: 40px;
+
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  
+}
+
+.asd {
+  background-color: red;
+  border: 2px solid blue;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 10px;
 }
