--- a/src/App.css
+++ b/src/App.css
@@ -181,11 +181,13 @@ html, body, #root, .app {
 }
 
 .asd.first {
-  border-radius: 10px 0 0 10px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
   margin-left: 5px;
 }
 
 .asd.last {
-  border-radius: 0 10px 10px 0;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
   margin-right: 5px;
 }
