--- a/src/App.css
+++ b/src/App.css
@@ -123,12 +123,14 @@ html, body, #root, .app {
   width: 100%;
   height: 100%;
 
-
   display: grid;
 
   margin-top: 40px;
   grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: repeat(3, 24px);
+  grid-template-rows: repeat(3, 22px);
+  gap: 4px 0;
+
+  grid-auto-flow: column dense;
 }
 
 .data {
@@ -148,7 +150,6 @@ html, body, #root, .app {
   font-size: 14px;
   
   color: white;
-  font-weight: 500;
 
   white-space: nowrap;
   overflow: hidden;
@@ -158,11 +159,11 @@ html, body, #root, .app {
 .data.first {
   border-top-left-radius: 6px;
   border-bottom-left-radius: 6px;
-  margin-left: 5px;
+  margin-left: 3px;
 }
 
 .data.last {
   border-top-right-radius: 6px;
   border-bottom-right-radius: 6px;
-  margin-right: 5px;
+  margin-right: 3px;
 }
