--- a/src/App.css
+++ b/src/App.css
@@ -134,7 +134,7 @@ html, body, #root, .app {
 }
 
 .data {
-  background-color: #0F172A;
+  background-color: #0f172a;
 
   display: flex;
   flex-direction: column;
