--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@ html, body, #root, .app {
   align-items: center;
   justify-content: center;
   font-weight: bold;
+  gap: 10px;
 }
 
 .nav {
@@ -118,7 +119,7 @@ html, body, #root, .app {
 }
 
 
-.calendar__task-container {
+.calendar__block-container {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -133,7 +134,7 @@ html, body, #root, .app {
   grid-auto-flow: column dense;
 }
 
-.data {
+.block {
   background-color: #0f172a;
 
   display: flex;
@@ -145,7 +146,7 @@ html, body, #root, .app {
   overflow: hidden;
 }
 
-.data > p {
+.block > p {
   width: 100%;
   font-size: 14px;
   
@@ -156,13 +157,13 @@ html, body, #root, .app {
   text-overflow: ellipsis;
 }
 
-.data.first {
+.block.first {
   border-top-left-radius: 6px;
   border-bottom-left-radius: 6px;
   margin-left: 3px;
 }
 
-.data.last {
+.block.last {
   border-top-right-radius: 6px;
   border-bottom-right-radius: 6px;
   margin-right: 3px;
