--- a/src/App.css
+++ b/src/App.css
@@ -21,20 +21,39 @@ html, body, #root, .app {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   font-weight: bold;
-  gap: 10px;
+  margin-bottom: 12px;
+}
+
+.calendar__current-date {
+  text-transform: capitalize;
+  font-size: 1.5rem;
+
 }
 
 .nav {
   display: flex;
   flex-direction: row;
   gap: 5px;
-  padding: 10px;
+  padding: 6px;
+  outline: 1px solid #E8EDF3;
+  border-radius: 10px;
 }
 
 .nav > button {
-  padding: 4px 8px;
+  padding: 6px 12px;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  border-radius: 6px;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.nav > button:hover {
+  background-color: #f2f5f9;
+  cursor: pointer;
 }
 
 .calendar {
@@ -42,8 +61,6 @@ html, body, #root, .app {
   width: fit-content;
 
   margin: 0 auto;
-  border-radius: 10px;
-  outline: 1px solid #E8EDF3;
 }
 
 .calendar__header {
@@ -104,6 +121,7 @@ html, body, #root, .app {
 .calendar__cell-number {
   padding: 5px;
   user-select: none;
+  font-variant-numeric: tabular-nums;
 }
 
 .calendar__cell-number.today {
@@ -126,13 +144,11 @@ html, body, #root, .app {
   gap: 4px 0;
 
   grid-auto-flow: column dense;
-  pointer-events: none;
 }
 
 
 .block {
   z-index: 5;
-  pointer-events: all;
   background-color: #0f172a;
 
   display: flex;
@@ -174,19 +190,78 @@ html, body, #root, .app {
 
 .popup {
   cursor: auto;
-  pointer-events: all;
   background-color: white;
-  padding: 10px;
+  padding: 10px 20px;
   border-radius: 3px;
   border: 1px solid #E8EDF3;
 
-  width: 250px;
-  height: 400px;
+  width: 400px;
+  height: 600px;
 
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
   z-index: 20 !important;
+
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 50px 1fr;
+
+  box-sizing: border-box;
+  border-radius: 8px;
+
+  pointer-events: painted;
 }
 
+.popup__header {
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
+}
+
+.popup__header > div {
+  background-color: transparent;
+  font-family: monospace;
+  padding: 4px;
+  border: none;
+  font-size: 2rem;
+}
+
+.popup__container {
+  overflow-y: scroll;
+  height: 100%;
+}
+
+
+.day-calendar {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 20px;
+}
+
+.day-calendar__time {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(24, 40px);
+  text-align: right;
+  font-weight: 500;
+  font-variant-numeric: tabular-nums;
+}
+
+.day-calendar__time > p {
+  margin-top: -3px;
+}
+
+.day-calendar__blocks {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(24, 40px);
+  overflow: hidden;
+}
+
+.day-calendar__blocks > div {
+  grid-column: 1 / 3;
+  background-color: #fbfbfb;
+  border-top: 2px solid #f1f1f1;
+}
