--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,6 @@ html, body, #root, .app {
 .calendar__current-date {
   text-transform: capitalize;
   font-size: 1.5rem;
-
 }
 
 .nav {
@@ -56,7 +55,7 @@ html, body, #root, .app {
   cursor: pointer;
 }
 
-.calendar {
+.calendar-wrapper {
   font-family: sans-serif;
   width: fit-content;
 
@@ -65,44 +64,43 @@ html, body, #root, .app {
 
 .calendar__header {
   display: grid;
-  grid-template-columns: repeat(7, 150px);
-  gap: 1px;
+  grid-template-columns: repeat(7, 160px); /* width of a cell */
 }
 
 .calendar__header-title {
   text-align: center;
-  font-weight: bold;
+  font-weight: 500;
   background-color: white;
-  padding: 10px;
+  padding: 20px 10px;
   text-transform: lowercase;
   outline: 1px solid #E8EDF3;
 }
 
 .calendar__body {
   display: grid;
-  grid-template-rows: repeat(6, 120px);
+  grid-template-rows: repeat(6, 145px); /* height of a cell */
 }
 
 .calendar__week {
   position: relative;
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
+  grid-template-columns: repeat(7, 160px); /* width of a cell */
+  grid-template-rows: 32px 1fr;
 }
 
 .calendar__cell {
   position: relative;
   background-color: white;
-
-  display: grid;
-  grid-template-rows: 40px 1fr;
   outline: 1px solid #E8EDF3;
-  transition: all 0.1s linear;
-  border: 0px solid #E8EDF3;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  padding: 4px;
 }
 
 .calendar__cell:hover {
   cursor: pointer;
-  border: 3px solid #E8EDF3;
 }
 
 .calendar__cell.grayed {
@@ -110,18 +108,11 @@ html, body, #root, .app {
   color: #94A3B8;
 }
 
-.calendar__cell-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: end;
-  align-items: center;
-  padding: 0 4px;
-}
-
 .calendar__cell-number {
   padding: 5px;
   user-select: none;
   font-variant-numeric: tabular-nums;
+  font-size: 0.8rem;
 }
 
 .calendar__cell-number.today {
@@ -132,15 +123,16 @@ html, body, #root, .app {
 
 
 .calendar__block-container {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-
   display: grid;
 
-  margin-top: 40px;
+  grid-row: 2;
+  grid-column: 1 / 8;
+
+  border: 1px solid red;
+
   grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: repeat(3, 22px);
+  grid-template-rows: repeat(10, 24px);
+  overflow-y: hidden;
   gap: 4px 0;
 
   grid-auto-flow: column dense;
@@ -148,7 +140,7 @@ html, body, #root, .app {
 
 
 .block {
-  z-index: 5;
+  z-index: 2;
   background-color: #0f172a;
 
   display: flex;
@@ -158,10 +150,7 @@ html, body, #root, .app {
   
   height: 100%;
   overflow: hidden;
-}
-
-.block:hover {
-  cursor: pointer;
+  pointer-events: none;
 }
 
 .block > p {
@@ -198,9 +187,12 @@ html, body, #root, .app {
   height: 600px;
 
   position: absolute;
+  left: calc(100% + 10px);
   top: 50%;
+  transform: translateY(-50%);
+/*   top: 50%;
   left: 50%;
-  transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%); */
   z-index: 20 !important;
 
   display: grid;
@@ -209,20 +201,24 @@ html, body, #root, .app {
 
   box-sizing: border-box;
   border-radius: 8px;
-
-  pointer-events: painted;
+  color: black;
 }
 
 .popup__header {
-  padding: 10px;
   display: flex;
   flex-direction: row;
   justify-content: right;
+  padding: 5px;
 }
 
 .popup__header > .cross {
   border-radius: 9999px;
   cursor: pointer;
+  padding: 5px;
+}
+
+.popup__header > .cross:hover {
+  background-color: rgb(240 240 240);
 }
 
 
@@ -265,4 +261,8 @@ html, body, #root, .app {
   grid-column: 1 / 3;
   background-color: #fbfbfb;
   border-top: 2px solid #f1f1f1;
+}
+
+.day-calendar__blocks > div:last-child {
+  border-bottom: 2px solid #f1f1f1;
 }
