--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
 * {
-  box-sizing: content-box;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: "Rubik";
@@ -257,9 +257,13 @@ html, body, #root, .app {
 .day-calendar__blocks {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: repeat(24, 40px);
+  grid-template-rows: repeat(24, 1fr);
   justify-content: center;
   overflow: hidden;
+
+  grid-row: 1;
+  grid-column: 2;
+  gap: 1px 0;
 }
 
 .day-calendar__blocks > .block {
@@ -272,8 +276,15 @@ html, body, #root, .app {
   box-sizing: border-box;
 }
 
+.day-calendar__blocks-background-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(24, 1fr);
+  grid-row: 1;
+  grid-column: 2;
+}
+
 .day-calendar__blocks-background {
-  grid-column: 1 / 3;
   background-color: #fbfbfb;
   border-top: 2px solid #f1f1f1;
 }
